# LU-matrix

./: CMakeLists.txt  README.md  experiments.cpp  experiments.h  generators.cpp  generators.h  linear_algebra.cpp  linear_algebra.h  main.cpp  pdf_text.txt  report_io.cpp  report_io.h  solvers.cpp  solvers.h  tests.cpp
results/: hilbert_accuracy.csv  multiple_rhs.csv  single_system.csv
